Add tests for FindCommand