@@ -4,14 +4,25 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static seedu.address.commons.core.Messages.MESSAGE_RESULTS_LISTED_OVERVIEW;
+import static seedu.address.logic.commands.CommandTestUtil.EMPTY_STRING;
 import static seedu.address.logic.commands.CommandTestUtil.assertCommandSuccess;
 import static seedu.address.testutil.PredicateGeneratorUtil.generateCombinedAppointmentPredicate;
 import static seedu.address.testutil.PredicateGeneratorUtil.generateCombinedPersonPredicate;
+import static seedu.address.testutil.TypicalAppointments.APPOINTMENT_BENSON;
+import static seedu.address.testutil.TypicalAppointments.APPOINTMENT_CARL;
+import static seedu.address.testutil.TypicalAppointments.SECOND_APPOINTMENT_CARL;
+import static seedu.address.testutil.TypicalPersons.ALICE;
+import static seedu.address.testutil.TypicalPersons.BENSON;
+import static seedu.address.testutil.TypicalPersons.CARL;
+import static seedu.address.testutil.TypicalPersons.DANIEL;
+import static seedu.address.testutil.TypicalPersons.ELLE;
+import static seedu.address.testutil.TypicalPersons.GEORGE;
 import static seedu.address.testutil.TypicalPersons.getTypicalAddressBook;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.function.Predicate;
 
 import org.junit.jupiter.api.Test;
@@ -19,6 +30,7 @@ import org.junit.jupiter.api.Test;
 import seedu.address.model.Model;
 import seedu.address.model.ModelManager;
 import seedu.address.model.UserPrefs;
+import seedu.address.model.person.Appointment;
 import seedu.address.model.person.predicates.CombinedAppointmentPredicate;
 import seedu.address.model.person.predicates.CombinedPersonPredicate;
 import seedu.address.model.person.predicates.NameContainsKeywordsPredicate;
@@ -28,7 +40,6 @@ import seedu.address.model.person.Person;
  * Contains integration tests (interaction with the Model) for {@code FindCommand}.
  */
 public class FindCommandTest {
-    private final String empty = "";
     private Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
     private Model expectedModel = new ModelManager(getTypicalAddressBook(), new UserPrefs());
 
@@ -79,22 +90,26 @@ public class FindCommandTest {
     }
 
     @Test
-    public void execute_zeroKeywords_AllPersonsAndAppointmentsFound() {
+    public void execute_zeroKeywords_AllPersonsAndAppointmentsListed() {
         String expectedMessage = String.format(MESSAGE_RESULTS_LISTED_OVERVIEW,
                 model.getFilteredPersonList().size(),
                 model.getFilteredAppointmentList().size());
-        CombinedPersonPredicate personPredicate = generateCombinedPersonPredicate(empty, empty, empty, empty, empty);
-        CombinedAppointmentPredicate appointmentPredicate = generateCombinedAppointmentPredicate(empty, empty, empty);
+        CombinedPersonPredicate personPredicate =
+                generateCombinedPersonPredicate(EMPTY_STRING, EMPTY_STRING, EMPTY_STRING, EMPTY_STRING, EMPTY_STRING);
+        CombinedAppointmentPredicate appointmentPredicate =
+                generateCombinedAppointmentPredicate(EMPTY_STRING, EMPTY_STRING, EMPTY_STRING);
         FindCommand command = new FindCommand(personPredicate, appointmentPredicate, false);
 
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
     }
 
     @Test
-    public void execute_findAllAppointments_OnlyPersonsWithAppointmentsFound() {
+    public void execute_findAllAppointments_OnlyPersonsWithAppointmentsListed() {
         String expectedMessage = String.format(MESSAGE_RESULTS_LISTED_OVERVIEW, 2, 3);
-        CombinedPersonPredicate personPredicate = generateCombinedPersonPredicate(empty, empty, empty, empty, empty);
-        CombinedAppointmentPredicate appointmentPredicate = generateCombinedAppointmentPredicate(empty, empty, empty);
+        CombinedPersonPredicate personPredicate =
+                generateCombinedPersonPredicate(EMPTY_STRING, EMPTY_STRING, EMPTY_STRING, EMPTY_STRING, EMPTY_STRING);
+        CombinedAppointmentPredicate appointmentPredicate =
+                generateCombinedAppointmentPredicate(EMPTY_STRING, EMPTY_STRING, EMPTY_STRING);
         FindCommand command = new FindCommand(personPredicate, appointmentPredicate, true);
 
         Predicate<Person> atLeastOneAppointment = person -> !person.getAppointments().isEmpty();
@@ -102,26 +117,121 @@ public class FindCommandTest {
         expectedModel.updateFilteredAppointmentList(appointmentPredicate);
 
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
+        assertEquals(Arrays.asList(BENSON, CARL), model.getFilteredPersonList());
     }
 
-    /*
     @Test
-    public void execute_multipleKeywords_multiplePersonsFound() {
-        String expectedMessage = String.format(MESSAGE_RESULTS_LISTED_OVERVIEW, 4, 3);
-        NameContainsKeywordsPredicate predicate = preparePredicate("Kurz Elle Kunz Benson");
-        FindCommand command = new FindCommand(predicate);
+    public void execute_findPersonName_OnlyAppointmentsFromFoundPersonsListed() {
+        // Search for patients whose names contain "e".
+        // Should only find Alice, Benson, Daniel, Elle and George, and display Benson's appointment.
+        String searchName = "e";
+        String expectedMessage = String.format(MESSAGE_RESULTS_LISTED_OVERVIEW, 5, 1);
+        CombinedPersonPredicate personPredicate = generateCombinedPersonPredicate(
+                searchName, EMPTY_STRING, EMPTY_STRING, EMPTY_STRING, EMPTY_STRING);
+        CombinedAppointmentPredicate appointmentPredicate =
+                generateCombinedAppointmentPredicate(EMPTY_STRING, EMPTY_STRING, EMPTY_STRING);
+        FindCommand command = new FindCommand(personPredicate, appointmentPredicate, false);
 
-        expectedModel.updateFilteredPersonList(predicate);
-        List<Person> validPersons = expectedModel.getFilteredPersonList();
-        AppointmentOfFilteredPersonsPredicate appointmentPredicate =
-                new AppointmentOfFilteredPersonsPredicate(validPersons);
+        Predicate<Appointment> onlyBensonAppointment = appointment -> appointment.getPatient().isSamePerson(BENSON);
+        expectedModel.updateFilteredPersonList(personPredicate);
+        expectedModel.updateFilteredAppointmentList(onlyBensonAppointment);
+
+        assertCommandSuccess(command, model, expectedMessage, expectedModel);
+        assertEquals(Arrays.asList(ALICE, BENSON, DANIEL, ELLE, GEORGE), model.getFilteredPersonList());
+        assertEquals(List.of(APPOINTMENT_BENSON), model.getFilteredAppointmentList());
+    }
+
+    @Test
+    public void execute_findAppointmentReason_OnlyPersonsFromFoundAppointmentsListed() {
+        // Search for appointment with reason "cough".
+        // Should only find Carl, and display only the cough appointment.
+        String searchReason = "cough";
+        String expectedMessage = String.format(MESSAGE_RESULTS_LISTED_OVERVIEW, 1, 1);
+        CombinedPersonPredicate personPredicate =
+                generateCombinedPersonPredicate(EMPTY_STRING, EMPTY_STRING, EMPTY_STRING, EMPTY_STRING, EMPTY_STRING);
+        CombinedAppointmentPredicate appointmentPredicate =
+                generateCombinedAppointmentPredicate(searchReason, EMPTY_STRING, EMPTY_STRING);
+        FindCommand command = new FindCommand(personPredicate, appointmentPredicate, true);
+
+        Predicate<Person> justCarl = person -> person.isSamePerson(CARL);
+        expectedModel.updateFilteredPersonList(justCarl);
         expectedModel.updateFilteredAppointmentList(appointmentPredicate);
 
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(Arrays.asList(BENSON, CARL, ELLE, FIONA), model.getFilteredPersonList());
+        assertEquals(List.of(CARL), model.getFilteredPersonList());
+        assertEquals(List.of(APPOINTMENT_CARL), model.getFilteredAppointmentList());
     }
 
-     */
+    @Test
+    public void execute_findAppointmentReason_OnlyRelevantAppointmentsListed() {
+        // Search for appointment with reason "throat".
+        // Should find Carl and Benson, and only display the Sore throat appointment from each of them
+        // (Benson's first and Carl's second appointment).
+        String searchReason = "throat";
+        String expectedMessage = String.format(MESSAGE_RESULTS_LISTED_OVERVIEW, 2, 2);
+        CombinedPersonPredicate personPredicate =
+                generateCombinedPersonPredicate(EMPTY_STRING, EMPTY_STRING, EMPTY_STRING, EMPTY_STRING, EMPTY_STRING);
+        CombinedAppointmentPredicate appointmentPredicate =
+                generateCombinedAppointmentPredicate(searchReason, EMPTY_STRING, EMPTY_STRING);
+        FindCommand command = new FindCommand(personPredicate, appointmentPredicate, true);
+
+        Predicate<Person> justCarlAndBenson = person -> person.isSamePerson(BENSON) || person.isSamePerson(CARL);
+        Predicate<Appointment> correctAppointment = appointment -> appointment.equals(APPOINTMENT_BENSON)
+                || appointment.equals(SECOND_APPOINTMENT_CARL);
+        expectedModel.updateFilteredPersonList(justCarlAndBenson);
+        expectedModel.updateFilteredAppointmentList(correctAppointment);
+
+        assertCommandSuccess(command, model, expectedMessage, expectedModel);
+        assertEquals(List.of(BENSON, CARL), model.getFilteredPersonList());
+        assertEquals(List.of(APPOINTMENT_BENSON, SECOND_APPOINTMENT_CARL), model.getFilteredAppointmentList());
+    }
+
+    @Test
+    public void execute_personAndAppointmentFind_OnlyRelevantResultsListed() {
+        // Search for phones containing the number "3" and appointments before 2015.
+        // Should only find Carl, and only display the cough appointment from Carl (his first appointment).
+        String searchPhone = "3";
+        String searchDateEnd = "2015-01-01 00:00";
+        String expectedMessage = String.format(MESSAGE_RESULTS_LISTED_OVERVIEW, 1, 1);
+        CombinedPersonPredicate personPredicate =
+                generateCombinedPersonPredicate(EMPTY_STRING, searchPhone, EMPTY_STRING, EMPTY_STRING, EMPTY_STRING);
+        CombinedAppointmentPredicate appointmentPredicate =
+                generateCombinedAppointmentPredicate(EMPTY_STRING, EMPTY_STRING, searchDateEnd);
+        FindCommand command = new FindCommand(personPredicate, appointmentPredicate, true);
+
+        Predicate<Person> justCarl = person -> person.isSamePerson(CARL);
+        Predicate<Appointment> onlyCarlFirstAppointment =
+                appointment -> appointment.equals(APPOINTMENT_CARL);
+        expectedModel.updateFilteredPersonList(justCarl);
+        expectedModel.updateFilteredAppointmentList(onlyCarlFirstAppointment);
+
+        assertCommandSuccess(command, model, expectedMessage, expectedModel);
+        assertEquals(List.of(CARL), model.getFilteredPersonList());
+        assertEquals(List.of(APPOINTMENT_CARL), model.getFilteredAppointmentList());
+    }
+
+    @Test
+    public void execute_findTagsAndEmail_OnlyRelevantResultsListed() {
+        // Search for persons with tag "friends" and email containing "li".
+        // Should only find Alice and Daniel, and no appointments.
+        String searchEmail = "li";
+        String searchTag = "friends";
+        String expectedMessage = String.format(MESSAGE_RESULTS_LISTED_OVERVIEW, 2, 0);
+        CombinedPersonPredicate personPredicate =
+                generateCombinedPersonPredicate(EMPTY_STRING, EMPTY_STRING, searchEmail, EMPTY_STRING, searchTag);
+        CombinedAppointmentPredicate appointmentPredicate =
+                generateCombinedAppointmentPredicate(EMPTY_STRING, EMPTY_STRING, EMPTY_STRING);
+        FindCommand command = new FindCommand(personPredicate, appointmentPredicate, false);
+
+        Predicate<Person> onlyAliceAndDaniel = person -> person.isSamePerson(ALICE) || person.isSamePerson(DANIEL);
+        Predicate<Appointment> alwaysFalse = unused -> false;
+        expectedModel.updateFilteredPersonList(onlyAliceAndDaniel);
+        expectedModel.updateFilteredAppointmentList(alwaysFalse);
+
+        assertCommandSuccess(command, model, expectedMessage, expectedModel);
+        assertEquals(List.of(ALICE, DANIEL), model.getFilteredPersonList());
+        assertEquals(Collections.emptyList(), model.getFilteredAppointmentList());
+    }
 
     /**
      * Parses {@code userInput} into a {@code NameContainsKeywordsPredicate}.
